@@ -1,6 +1,11 @@
 v2.3.0 (2014-11-18)
 -------------------
 
+* fixed syslog flags. `--log.syslog` is deprecated and setting it has no effect, 
+  `--log.facility` now works as described. Application name has been changed from
+  `triagens` to `arangod`. It can be changed using `--log.application`. The syslog
+  will only contain the actual log message. The datetime prefix is omiited.
+
 * fixed deflate in SimpleHttpClient
 
 * hide system applications in **Applications** tab by default
